--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
   "name": "angular-swellrt",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "authors": [
-    "Antonio Tenorio Fornés <antoniotenorio@ucm.es>"
+    "Antonio Tenorio Fornés <antoniotenorio@ucm.es>",
+    "Antonio Tapiador del Dujo <atapiador@ucm.es>"
   ],
   "description": "SwellRT integration for angular.js: 3 way data binding (client, model, server) for real time collaboration over a federated infraestructure thanks to SwellRT technology.",
   "main": "swellrt.js",
@@ -25,5 +26,9 @@
   ],
   "dependencies": {
     "angular": "~1.4.0"
+    "jasmine": "~2.3.4"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.4.0"
   }
 }
