--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.0"
+    "angular": "~1.4.0",
     "jasmine": "~2.3.4"
   },
   "devDependencies": {
