--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "angular-mocks": "^1.3.16",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
+    "gulp-release-tasks": "0.0.3",
     "karma": "^0.12.36",
     "karma-chrome-launcher": "^0.1.12",
     "karma-cli": "0.0.4",
