--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   },
   "homepage": "https://github.com/P2Pvalue/angular-swellrt",
   "dependencies": {
-    "angular": "^1.3.16"
+    "angular": "^1.3.16",
+    "babel-preset-es2015": "^6.6.0",
+    "gulp-babel": "^6.1.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.16",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-connect": "^2.2.0",
     "gulp-release-tasks": "0.0.3",
     "karma": "^0.12.36",
