--- a/package.json
+++ b/package.json
@@ -34,14 +34,19 @@
   "devDependencies": {
     "angular-mocks": "^1.3.16",
     "gulp": "^3.9.1",
+    "gulp-bump": "^2.1.0",
     "gulp-connect": "^2.2.0",
+    "gulp-filter": "^4.0.0",
+    "gulp-git": "^1.7.0",
     "gulp-release-tasks": "0.0.3",
+    "gulp-tag-version": "^1.3.0",
     "karma": "^0.12.36",
     "karma-chrome-launcher": "^0.1.12",
     "karma-cli": "0.0.4",
     "karma-jasmine": "^0.3.5",
     "karma-junit-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^0.2.0",
-    "phantomjs": "^1.9.17"
+    "phantomjs": "^1.9.17",
+    "request-json": "^0.5.5"
   }
 }
