--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-filter": "^4.0.0",
     "gulp-git": "^1.7.0",
     "gulp-tag-version": "^1.3.0",
+    "jasmine-core": "^2.6.3",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^0.1.12",
     "karma-cli": "0.0.4",
